--- a/templates/imagestopdf.html
+++ b/templates/imagestopdf.html
@@ -9,7 +9,8 @@
     <meta name="author" content="iMasterPDF" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1234567890123456" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6782945468754840"
+    crossorigin="anonymous"></script>
 
     <style>
         :root {
